# flir_icp_calib

./: CMakeLists.txt  Citation.cff  Readme.md  package.xml
cfg/: 1024x768.json  Calibration.schema.json  Calibration1024x768.json  TransformsSettings.Scheme.json
cmake/: Config.cmake.in  config.h.in
data/: local_calibration.schema.json
launch/: interface.launch
log/2025-06-17_16:21:45/: Calibration.json  TransformsSettings.json  local_pattern.json  result.json
pattern_generation/: .gitignore  detect.py  gen.py
src/flir_icp_calib/: camera_config.cpp  camera_config.hpp  config.h  config_parser.cpp  config_parser.hpp  dataIO.cpp  dataIO.hpp  hardware_constants.h  interface.cpp  interface.hpp  methods.cpp  methods.hpp  visualization.cpp  visualization.hpp
src/nodes/: interface_aruco.cpp  publish_result.cpp
